<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">MiMi</string>
    <string name="splash_text">欢  迎  来  到  蜜  蜜</string>
    <string name="error_device_binding_title">@string/oops</string>
    <string name="error_device_binding_positive">@string/i_know</string>
    <string name="oops">Oops!</string>
    <string name="i_know">知道了</string>
    <string name="upload_succeed">上传成功</string>
    <string name="unexpected_error">未预期的错误</string>
    <string name="press_again_exit">再按一次离开 APP</string>
    <string name="nav_home">首页</string>
    <string name="nav_clip">小视频</string>
    <string name="nav_club">社区</string>
    <string name="nav_personal">我的</string>
    <string name="home">首页</string>
    <string name="all">全部</string>
    <string name="friendly_name_format_error_1">请填写中文、英文或数字或特殊符号</string>
    <string name="friendly_name_format_error_2">已超过字数上限20字</string>
    <string name="email_format_error_1">请填写email</string>
    <string name="email_format_error_2">请填写正确的Email格式</string>
    <string name="email_format_error_3">已超过字数上限100字，请确认</string>
    <string name="email_format_error_4">此Email已存在，请重新填写</string>
    <string name="account_format_error_1">请填写账号</string>
    <string name="account_format_error_2">請填寫5~20字的英文或數字</string>
    <string name="account_format_error_3">此账号已存在，请重新填写</string>
    <string name="password_format_error_1">请填写密码</string>
    <string name="password_format_error_2">请填写8~20字的英文、数字或特殊符号，区分大小写</string>
    <string name="password_format_error_3">请填写确认密码</string>
    <string name="password_format_error_4">与密码不相符合，请确认</string>
    <string name="mobile_format_error_1">请填写手机号</string>
    <string name="mobile_format_error_2">请填写正确的手机号</string>
    <string name="account_error_1">請填写名稱</string>
    <string name="invalidate_code_error_1">请填写验证码</string>
    <string name="invited_code_error_1">邀请码无效，请确认</string>
    <string name="receive_mail">请收验证信</string>
    <string name="send_msg">已发送验证码到手机号，请查收</string>
    <string name="desc_register">请至信箱查看验证信以完成账号注册</string>
    <string name="desc_email">已传送新密码至您的邮箱\n%s\n请至邮箱确认</string>
    <string name="desc_mobile">已传送新密码至您的手机号\n%s\n请确认</string>
    <string name="desc_email_account_not_match">Email与账号不符，请确认</string>
    <string name="desc_success">登录成功</string>
    <string name="forget_password">忘记密码</string>
    <string name="login_yet">尚未登录</string>
    <string name="login_message">请立即登录享受线上强档</string>
    <string name="login_message_account">请登录帐户</string>
    <string name="error_bad_request">参数错误</string>
    <string name="error_username_or_password_incorrect">使用者名称或密码错误</string>
    <string name="error_account_disable">此帐户已停用</string>
    <string name="error_validation">验证錯誤</string>
    <string name="error_validation_code">验证碼錯誤，請確認</string>
    <string name="error_invite_code">邀请码无效，请确认</string>
    <string name="error_email_duplicate">此Email已存在，請重新填寫</string>
    <string name="error_account_duplicate">此账号已存在，请重新填写</string>
    <string name="error_mobile_duplicate">此手机已存在，请重新填写</string>
    <string name="error_first_login">第一次登入需重设密码</string>
    <string name="reset_pw_success">重设密码</string>
    <string name="verify_immediately">立即验证</string>
    <string name="verify_later">稍后验证</string>
    <string name="error_email_not_confirmed_title">尚未验证</string>
    <string name="error_email_not_confirmed_msg">Email 尚未验证，请先完成验证后登录</string>
    <string name="error_mobile_not_exist">手机号不存在，请先注册 </string>
    <string name="topup_desc">购买 VIP</string>
    <string name="topup_total">总计</string>
    <string name="topup_next">下一步</string>
    <string name="topup_subtitle">会员尊享 每天无限观看</string>
    <string name="topup_proxy_title_name">火热代理</string>
    <string name="topup_online_empty">所有在线均在忙碌中，请稍後再试。</string>
    <string name="topup_proxy_empty">所有代理均在忙碌中，请稍後再试。</string>
    <string name="topup_select_error">请选择在线支付方案</string>
    <string name="topup_pending_order_1">尚有</string>
    <string name="topup_pending_order_2">笔充值作业未完成，请稍后再试</string>
    <string name="topup_goto_top_up_manage">前往充值管理</string>
    <string name="home_tab_video">蜜蜜影视</string>
    <string name="home_tab_follow">关注</string>
    <string name="home_tab_clip">短视频</string>
    <string name="home_tab_picture">图片</string>
    <string name="home_tab_text">短文</string>
    <string name="home_tab_club">圈子</string>
    <string name="club_tab_follow">关注</string>
    <string name="club_tab_recommend">推荐</string>
    <string name="club_tab_latest">最新</string>
    <string name="club_tab_clip">短视频</string>
    <string name="club_tab_picture">图片</string>
    <string name="club_tab_novel">小說</string>
    <string name="club_search_hint">搜寻 ”该分类” 内容</string>
    <string name="club_topic_title">热门主题</string>
    <string name="club_favorite">收藏</string>
    <string name="club_share">分享</string>
    <string name="club_report">回报</string>
    <string name="club_like_count">赞%1$d</string>
    <string name="club_dislike_count">踩%1$d</string>
    <string-array name="club_tabs">
        <item>@string/club_tab_follow</item>
        <item>@string/club_tab_recommend</item>
        <item>@string/club_tab_latest</item>
        <item>@string/club_tab_clip</item>
        <item>@string/club_tab_picture</item>
        <item>@string/club_tab_novel</item>
    </string-array>
    <string-array name="club_hot_topic_tabs">
        <item>@string/hottest</item>
        <item>@string/newest</item>
        <item>@string/video</item>
    </string-array>
    <string name="favorite_title">我的收藏</string>
    <string name="favorite_clean">清除所有收藏</string>
    <string name="favorite_normal">一般视频</string>
    <string name="favorite_adult">成人视频</string>
    <string name="favorite_tab_mimi">蜜蜜影视</string>
    <string name="favorite_tab_short">短视频</string>
    <string name="favorite_follow">+关注</string>
    <string name="favorite_btn_clean">是否要清除所有收藏</string>
    <string name="favorite_delete_favorite">取消收藏</string>
    <string name="favorite_no_data">尚未收藏影片，快去看片吧！</string>
    <string name="favorite_delete_this_favorite">是否要清除此收藏</string>
    <string name="favorite_tab1">蜜蜜影视</string>
    <string name="favorite_tab2">小视频</string>
    <string name="favorite_tab3">帖子</string>
    <string-array name="favorite_tabs">
        <item>@string/favorite_tab1</item>
        <item>@string/favorite_tab2</item>
        <item>@string/favorite_tab3</item>
    </string-array>
    <string name="phone_num">手机号</string>
    <string name="personal_title">我的</string>
    <string name="personal_not_login_tips">请立即登录享受完整功能</string>
    <string name="personal_not_login_tips_1">还没登录吗?</string>
    <string name="personal_not_login_tips_2">赶紧登录观看更多内容</string>
    <string name="personal_not_login_tips_3">若尚未成为会员，赶紧注册体验更多内容</string>
    <string name="personal_not_login_tips_4">请立即登录享受完整功能</string>
    <string name="personal_topup_page">充值</string>
    <string name="personal_topup">充值去 ></string>
    <string name="personal_follow">我的收藏</string>
    <string name="personal_order">充值管理</string>
    <string name="personal_topup_now">现在充值去</string>
    <string name="personal_my_post">我的帖子</string>
    <string name="personal_chat_history">对话记录</string>
    <string name="personal_setting">设置</string>
    <string name="personal_old_driver">蜜蜜老司机群</string>
    <string name="personal_version_text">版本</string>
    <string name="personal_version_v_char">V\u0020</string>
    <string name="personal_check_update">检查更新</string>
    <string name="personal_checking_update">检查更新中…</string>
    <string name="btn_logout">登出</string>
    <string name="title_setting">个人设置</string>
    <string name="setting_photo">头像</string>
    <string name="setting_name">名称</string>
    <string name="setting_email">Email</string>
    <string name="setting_account">帐号</string>
    <string name="setting_gender">性别</string>
    <string name="setting_choose">请选择</string>
    <string name="setting_birthday">生日</string>
    <string name="setting_birthday_title">修改生日</string>
    <string name="setting_type_birthday">请填写生日</string>
    <string name="setting_birthday_hint">YYYY-MM-DD</string>
    <string name="setting_birthday_error">格式错误(YYYY-MM-DD)</string>
    <string name="setting_change_name">修改名称</string>
    <string name="setting_change_pw">修改密码</string>
    <string name="setting_mail_title">信箱设置</string>
    <string name="setting_resend_mail">重发认证信</string>
    <string name="setting_change_password">修改密码</string>
    <string name="setting_current_password">目前密码</string>
    <string name="setting_current_password_error_1">请填写目前密码</string>
    <string name="setting_current_password_error_2">密码错误</string>
    <string name="setting_new_password">新密码</string>
    <string name="setting_new_password_error_1">请填写新密码</string>
    <string name="setting_confirm_password">确认新密码</string>
    <string name="setting_confirm_password_error_1">请填写确认新密码</string>
    <string name="setting_confirm_password_error_2">与新密码不相符</string>
    <string name="setting_binding_invitation">绑定邀请码</string>
    <string name="setting_enter_invitation">请填写邀请码</string>
    <string name="setting_binding_success">绑定邀请码成功</string>
    <string name="setting_binding_failed">绑定邀请码失敗</string>
    <string name="setting_binding_enter_5_digits">请填写5位數邀请码</string>
    <string name="pls_choose_photo">选择图片</string>
    <string name="upload_tool">上传图片工具</string>
    <string name="choose_camera">使用相机</string>
    <string name="choose_album">使用相薄</string>
    <string name="file_type_not_supported">不支援的档案格式，请重新上传</string>
    <string name="binding_phone">注册登录</string>
    <string name="member_id">蜜蜜编号： </string>
    <string name="setting_bind_phone">绑定手机号</string>
    <string name="topup_refresh_payment_prompt">下拉刷新支付状态</string>
    <string name="topup_all">全部</string>
    <string name="topup_online_pay">在线支付</string>
    <string name="topup_proxy_pay">代理支付</string>
    <string name="topup_proxy_order">代理订单</string>
    <string name="topup_proxy_chat">对话记录</string>
    <string name="topup_pay">支付金额(¥)</string>
    <string name="topup_order_id">充值订单编号</string>
    <string name="topup_point">方案</string>
    <string name="topup_create_time">訂單建立時間</string>
    <string name="topup_completion_time">充值完成時間</string>
    <string name="topup_check_info">查看打款资讯</string>
    <string name="topup_contact">联系客服</string>
    <string name="topup_pending">交易未完成</string>
    <string name="topup_transaction">Transaction</string>
    <string name="topup_order_creating">订单建立中</string>
    <string name="topup_order_create_fail">订单建立失败</string>
    <string name="topup_completed">交易成功</string>
    <string name="topup_canceled">Canceled</string>
    <string name="topup_failed">交易失败</string>
    <string name="topup_teaching">充值教学 ></string>
    <string name="title_chat_history">对话记录</string>
    <string name="edit_hint_chat">留下评论</string>
    <string name="issue_report">问题回报</string>
    <string name="resend_mail_success">重发认证信成功</string>
    <string name="gender_success">修改性别成功</string>
    <string name="btn_register">注册</string>
    <string name="btn_login">登录</string>
    <string name="comment">评论</string>
    <string name="all_comment">所有评论</string>
    <string name="newest">最新</string>
    <string name="hottest">最热</string>
    <string name="picture_detail_comment_newest">最新</string>
    <string name="picture_detail_comment_top">最热</string>
    <string name="upload_video">上传视频</string>
    <string name="upload_photo">上传照片</string>
    <string name="upload_article">上传短文</string>
    <string name="upload_cancel">取消</string>
    <string name="updated_version_title">已有更新版本，是否立即更新</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="recharge_reminder_message"><font fgcolor="#ffffff">免费观看次数已用完\n成功推广 1 人赠送</font> <font fgcolor='#FF4D4D'>2</font><font fgcolor="#ffffff">天 VIP\n可无限叠加，免费观看所有视频</font></string>
    <string name="recharge_reminder_btn_vip">充值 VIP</string>
    <string name="recharge_reminder_btn_promote">推广好友</string>
</resources>