<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black_1_60">

<androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline_center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5"/>
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recharge_reminder_message"
        android:textColor="@color/color_white_1"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    
    <Button
        android:id="@+id/btn_vip"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:text="@string/recharge_reminder_btn_vip"
        android:textColor="@color/color_red_1"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_confirm_radius_10_hollow"
        app:layout_constraintRight_toRightOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/message"/>

    <Button
        android:id="@+id/btn_promote"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        android:text="@string/recharge_reminder_btn_promote"
        android:textColor="@color/color_white_1"
        android:layout_marginStart="10dp"
        android:background="@drawable/btn_confirm_radius_10"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_center"
        app:layout_constraintTop_toBottomOf="@+id/message"/>


</androidx.constraintlayout.widget.ConstraintLayout>