<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@drawable/rect_white_1_radius_20"
    android:elevation="2dp"
    android:paddingStart="20dp"
    android:paddingTop="50dp"
    android:paddingEnd="20dp">

    <EditText
        android:id="@+id/tv_editor"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:hint="@string/setting_enter_invitation"
        android:lines="1"
        android:textColor="@color/color_black_1_50"
        android:textSize="14sp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:background="@drawable/btn_cancel_radius_10"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_black_1_50"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@+id/btn_confirm"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_confirm_radius_10"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/color_white_1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>
