<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@drawable/rect_white_1_radius_20"
    android:elevation="2dp"
    android:paddingStart="20dp"
    android:paddingTop="50dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/tv_msg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/updated_version_title"
        android:textColor="@color/color_black_1_50"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:text="@string/confirm"
        android:background="@drawable/btn_stroke_blue_1_radius_10"
        android:textColor="@color/color_blue_1"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintLeft_toRightOf="@+id/btn_cancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:background="@drawable/btn_stroke_red_1_radius_10"
        android:textColor="@color/color_blue_1"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>
