<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp"
    android:background="@color/color_black_1_60">

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/color_white_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/personal_not_login_tips_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="101dp"
        android:layout_height="33dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_transparent_stroke_radius_6"
        android:gravity="center"
        android:text="@string/btn_register"
        android:textColor="@color/color_red_1"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_login"
        app:layout_constraintTop_toBottomOf="@id/tv_tips"
         />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="101dp"
        android:layout_height="33dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_red_1_radius_6"
        android:gravity="center"
        android:text="@string/btn_login"
        android:textColor="@color/color_white_1"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/tv_register"
        app:layout_constraintTop_toTopOf="@id/tv_register"/>



</androidx.constraintlayout.widget.ConstraintLayout>