<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white_1_top_radius_35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ico_rank_shortvideo_gray"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/upload_video"
            android:textColor="@color/color_black_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_camera"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ico_rank_pic_gray"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/upload_photo"
            android:textColor="@color/color_black_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_article"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_article"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ico_text_gray"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"
            android:text="@string/upload_article"
            android:textColor="@color/color_black_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/line"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_gray_13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_article" />

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="9dp"
            android:gravity="center"
            android:text="@string/upload_cancel"
            android:textColor="@color/color_black_1"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>